fix page overflow on android

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,4 +1,5 @@
 nav {
 	background: #F8F8F8;
 	box-shadow: 1px 1px 20px #888;
+	overflow: hidden;
 }
